# Mixed-Navigation

./: README.md  ReadMe.md
mixed_nav/: CMakeLists.txt  package.xml
mixed_nav/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_d435i.yaml  local_costmap_params_lidar.yaml  teb_local_planner_params.yaml
mixed_nav/launch/: map_server.launch  navigation_sim.launch  pcd_adjuster.launch  record_nav_points.launch  view_map.launch  visualize_path.launch
mixed_nav/resources/: 2d_room_zheng.pgm  2d_room_zheng.yaml  README-CN.md  README-EN.md
mixed_nav/resources/floors/: z_config.json
mixed_nav/resources/floors/floor0/: floor0.pgm  floor0.yaml  waypoints.json
mixed_nav/resources/floors/floor1/: floor1.pgm  floor1.yaml  waypoints.json
mixed_nav/resources/floors/floor3/: floor3.pgm  floor3.yaml
mixed_nav/rviz/: nav_rviz.rviz  path_points.rviz  record_path.rviz  view_map.rviz
mixed_nav/scripts/: dynamic_map_loader.py  floor_switcher.py  path_navigator_node.py  pc2pgm.py  pcd_map_publisher.py  recorder_node.py  simulation.py  visualize_nav_paths.py
mixed_nav/scripts/tools/: pc2pgm.py
